# mikado

./: .codecov.yml  .travis.yml  CMakeLists.txt  MikadoConfig.cmake.in  README.md
.circleci/: config.yml
debian/: changelog  control  copyright  libmikado-dev.install  rules
src/: CMakeLists.txt  helper.cpp  helper.hpp  helpers.cpp  helpers.hpp  linear_solver.cpp  linear_solver.hpp  linear_solver_decl.hpp  linear_solver_def.hpp  mikado.hpp  nonlinear_solver.cpp  nonlinear_solver.hpp  run-clang-tidy.sh
test/: CMakeLists.txt  helpers.cpp  linear.cpp  main.cpp  nonlinear-config.yml  nonlinear.cpp  t.cpp
