FIND_PACKAGE(MPI REQUIRED)

INCLUDE_DIRECTORIES(${Mikado_SOURCE_DIR}/src/)
INCLUDE_DIRECTORIES(SYSTEM
  ${Trilinos_INCLUDE_DIRS}
  ${Trilinos_TPL_INCLUDE_DIRS}
  )

SET(internal_LIBS "mikado")

SET(LINEARTEST_EXECUTABLE "linearTest")
ADD_EXECUTABLE (${LINEARTEST_EXECUTABLE} linear.cpp main.cpp)
# add tests
ADD_TEST(linearTestSerial ${LINEARTEST_EXECUTABLE})
# Check out FindMPI.cmake for proper syntax.
# ADD_TEST(ioTestMpi2
#   ${Trilinos_MPI_EXEC} --noprefix ${Trilinos_MPI_EXEC_NUMPROCS_FLAG} 2 ${IOTEST_EXECUTABLE}
#   )
# ADD_TEST(ioTestMpi7
#   ${Trilinos_MPI_EXEC} --noprefix ${Trilinos_MPI_EXEC_NUMPROCS_FLAG} 7 ${IOTEST_EXECUTABLE}
#   )
TARGET_LINK_LIBRARIES(${LINEARTEST_EXECUTABLE} ${internal_LIBS})

SET(NONLINEARTEST_EXECUTABLE "nonlinearTest")
ADD_EXECUTABLE(${NONLINEARTEST_EXECUTABLE} nonlinear.cpp main.cpp)
ADD_TEST(nonlinearTestSerial ${NONLINEARTEST_EXECUTABLE})
TARGET_LINK_LIBRARIES(${NONLINEARTEST_EXECUTABLE} ${internal_LIBS})
